Increased the duration of individual voyage animations on lower speeds. Made the animation smoother by dropping older code that simplified interpolation and grouping circles by color when drawing on Canvas. A few fixes to timelapse. Changed z-index of some map elements (leaflet) due to problems with the site's top level menus.

--- a/voyages/sitemedia/scss/legacy/animation.css
+++ b/voyages/sitemedia/scss/legacy/animation.css
@@ -164,9 +164,12 @@
 
 .leaflet-control-container {
     position: absolute;
-    z-index: 1000;
 }
 
 .timelapse_btn_disabled > path {
     fill: gray !important;
+}
+
+.timeline_slider_group *, .timelapse_control_group * {
+    cursor: pointer;
 }
