--- a/voyages/sitemedia/scss/main.scss
+++ b/voyages/sitemedia/scss/main.scss
@@ -361,6 +361,17 @@ footer {
   // border-left: 4px solid #008ca8;
 }
 
+.leaflet-control-container {
+  z-index: 0;
+}
+
+.leaflet-pane {
+  z-index: 0 !important;
+}
+
+.leaflet-overlay-pane {
+  z-index: 200 !important;
+}
 
 .navbar-subtitle {
   font-weight: 500;
